<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_locate"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/title_locate" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/title_report" />

    <!--<item-->
        <!--android:id="@+id/navigation_our_rating"-->
        <!--android:icon="@drawable/ic_library_music_black_24dp"-->
        <!--android:title="@string/title_our_rating" />-->

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:title="@string/title_more" />

</menu>
