<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/lighterOrange"
        android:padding="5dp">

        <TextView
            android:id="@+id/tv_aim"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/aim"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp" />
        <TextView
            android:id="@+id/tv_aim_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aim_content"
            android:textSize="15sp"
            android:background="@color/lightOrange"
            android:padding="10dp" />
        <TextView
            android:id="@+id/tv_who"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/who"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            />
        <TextView
            android:id="@+id/tv_who_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/who_content"
            android:textSize="15sp"
            android:background="@color/lightOrange"
            android:padding="10dp"
            />

    </LinearLayout>
</ScrollView>