<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightOrange"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pigs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rating Pigs"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/title_hens_avoid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="BEST"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@color/green"/>

        <TextView
            android:id="@+id/hens_avoid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pigs_best"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/title_chickens_avoid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="GOOD"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@color/orange"/>
        <TextView
            android:id="@+id/chickens_avoid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pigs_good"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/title_pigs_avoid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="AVOID"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@color/red"/>
        <TextView
            android:id="@+id/pigs_avoid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pigs_avoid"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/pigs_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/line"
            android:textSize="15sp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/pigs_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pig_nb"
            android:textSize="10sp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
    </LinearLayout>
</ScrollView>