<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <EditText
        android:id="@+id/inputName1"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:hint="Name..."
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/inputEmailR1"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:hint="Email..."
        android:inputType="text"
        android:maxLines="1" />

    <RadioGroup
        android:id="@+id/radioGender"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:layout_marginTop="200dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gender:"
            android:textSize="18dp"
            android:layout_marginRight="10dp" />

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_male"
            android:checked="true"
            android:layout_marginRight="7dp" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_female"
            android:layout_marginRight="7dp" />

        <RadioButton
            android:id="@+id/radioNotClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_not_disclose" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/inputBirthday"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="Date of Birth..."
            android:layout_gravity="center"
            android:maxLines="1"
            android:focusable="false"
            android:inputType="none"
            android:editable="false" />

        <ImageView
            android:id="@+id/datePicker"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:background="@drawable/ic_date_range_black_24dp" />

    </LinearLayout>

    <CheckBox android:id="@+id/checkIfDiscloseDOB"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="I prefer NOT to disclose my birthday."
        android:layout_marginBottom="10dp"/>

    <CheckBox android:id="@+id/checkAgreement"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="I have agreed that my info will be collected by the app for statistics."
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@drawable/button_style"
        android:text="Submit" />



</LinearLayout>